log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Thu 30 Mar 2023 11:23:08 PM UTC: 
 arraylist.c | 22 +++++++++++++++++++++-
 1 file changed, 21 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘push’:
arraylist.c:24:30: error: expected ‘;’ before ‘l’
   24 |     l->capacity=l->capacity*2
      |                              ^
      |                              ;
   25 |     l->data =(void*) realloc(sizeof(void*)*l->capacity)
      |     ~                         
arraylist.c: In function ‘get’:
arraylist.c:44:8: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   44 |     if(l->capacity=0){
      |        ^
arraylist.c: In function ‘push’:
arraylist.c:50:12: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   50 |     return NULL;
      |            ^~~~
arraylist.c:21:6: note: declared here
   21 | void push(ArrayList * l, void * data, int i){
      |      ^~~~
At top level:
arraylist.c:39:7: error: ‘get’ defined but not used [-Werror=unused-function]
   39 | void* get(ArrayList * l, int i){
      |       ^~~
arraylist.c:35:7: error: ‘pop’ defined but not used [-Werror=unused-function]
   35 | void* pop(ArrayList * l, int i){
      |       ^~~
cc1: all warnings being treated as errors
Compilation failed
a5f4ff4
